--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,6 +3,12 @@
  * used in: login.html, signup.html
  */
 
+/** prevent from spanning whole viewport (?) */
+body
+{
+height: 100%;
+}
+
 #errorP
 {
     color: red;
