--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -8,7 +8,7 @@ main
 /* left side: image */
 section
 {
-    background: #555;
+    background: var(--theme-gray);
     /* center vertically */
     align-items: center;
     display: flex;
@@ -27,16 +27,53 @@ img
     aspect-ratio: 1 / 1;
     /** shrink to fit any box */
     object-fit: contain;
+    /** allow image stacking */
+    position: fixed;
     max-width: 80%;
-    max-height: 80%;
-    /** explicitly tell image to take all available width */
-    width: 100%;
+    height: 80%;
+}
+
+#hatsImg, #shirtsImg, #pantsImg
+{
+    z-index: 1;
+}
+
+/** display item information */
+#itemFigure
+{
+    position: absolute;
+    bottom: 5%;
+
+    background: orange;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem 1rem;
+    z-index: 2;
+}
+
+/** buy/equip button */
+#buyButton
+{
+
+    background: var(--theme-red);
+    border: 0;
+    color: var(--theme-white);
+    cursor: not-allowed;
+    /* display: none; */
+    padding: 0.5rem 1rem;
+    z-index: 2;
+}
+
+.enabled
+{
+    background: var(--theme-green);
+    cursor: pointer;
 }
 
 /* right side */
 aside
 {
-    background: pink;
+    background: var(--theme-gray);
     display: flex;
     flex-direction: column;
     float: right;
@@ -49,6 +86,38 @@ aside
 /* carousels */
 aside > figure
 {
-    background:lightblue;
+    /* background:lightblue; */
+    display: flex;
+    gap: 1rem;
     height: 25%;
+    /** horizontal scroll but no vertical */
+    overflow: scroll hidden;
+}
+
+/* item */
+aside > figure > article
+{
+    aspect-ratio: 1 / 1;
+    background: var(--theme-darkgray);
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/** item name */
+aside > figure > article > h2
+{
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.selected
+{
+    background: var(--theme-blue);
+}
+
+.equipped
+{
+    background: var(--theme-green);
 }
