--- a/public/css/base.css
+++ b/public/css/base.css
@@ -8,6 +8,7 @@
     --theme-green: #54af54;
     --theme-red: #af5454;
     --theme-white: #eee;
+    --theme-yellow: #bfbf54;
 }
 
 /** universal box-sizing */
