--- a/public/css/users.css
+++ b/public/css/users.css
@@ -41,8 +41,8 @@ img
     z-index: 1;
 }
 
-/** display item information for buy/equipping */
-#buyFigure
+/** display selected user's name */
+#infoFigure
 {
     position: absolute;
     bottom: 5%;
@@ -54,83 +54,45 @@ img
     z-index: 2;
 }
 
-#buyP
+#infoP
 {
-    font-size: 1.2rem;
+    font-size: 2rem;
     font-weight: bold;
 }
 
-/** buy/equip button */
-#buyButton
-{
-    background: var(--theme-green);
-    border: 0;
-    color: var(--theme-white);
-    cursor: pointer;
-    padding: 0.5rem 1rem;
-    z-index: 2;
-}
 
-/** when button is disabled */
-#buyButton:disabled
-{
-    background: var(--theme-red);
-    cursor: not-allowed;
-}
-
-/* right side */
+/* right side: user figures */
 aside
 {
-    background: var(--theme-gray);
+    background: var(--theme-blue);
     display: flex;
     flex-direction: column;
     float: right;
     gap: 1rem;
     height: 100%;
+    justify-content: start;
+    overflow-y: auto;
+    padding: 5rem 0;
     width: 50%;
-    justify-content: center;
 }
 
-/* carousels */
+/* user */
 aside > figure
 {
-    /* background:lightblue; */
-    display: flex;
-    gap: 1rem;
-    height: 25%;
-    /** horizontal scroll but no vertical */
-    overflow: scroll hidden;
-}
-
-/* item */
-aside > figure > article
-{
-    aspect-ratio: 1 / 1;
-    background: var(--theme-darkgray);
+    background: var(--theme-red);
+    border: 4px solid var(--theme-black);
+    border-radius: 1rem;
     cursor: pointer;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-/** item name */
-aside > figure > article > h2
-{
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
-.owned
-{
-    background: var(--theme-red);
+    font-size: 2rem;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 1rem;
+    padding: 1rem;
+    /* height: ; */
 }
 
 .selected
-{
-    background: var(--theme-blue);
-}
-
-.equipped
 {
     background: var(--theme-yellow);
 }
